fix: fixed page frame and root to allow overflow
chore: refactored code a bit

--- a/src/app/components/pageFrame/PageFrame.module.css
+++ b/src/app/components/pageFrame/PageFrame.module.css
@@ -1,44 +1,46 @@
+:root {
+  --frame-element-size: calc(100% - var(--frame-width));
+}
+
 .frame {
   display: flex;
   position: relative;
-  width: calc(100% - var(--frame-width));
-  height: calc(100% - var(--frame-width));
+  flex-direction: column;
+  align-items: stretch;
+  
+  width: var(--frame-element-size);
 
   background-color: var(--foreground);
   border-radius: 20px;
-  overflow: hidden;
-  flex-direction: column;
-  align-items: center;
+
   padding: var(--frame-padding);
-  position: relative;
-  overflow:  auto;
+  
+  overflow: auto;
 }
-.frame > *{
-  width: 100%;
-  height: 100%;
-}
+
 .header {
-  position: absolute;
+  position: sticky;
   top: 0;
   left: 0;
   height: var(--frame-width);
-  width: 100%;
+  width: var(--frame-element-size);
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: var(--frame-padding)
 }
 
 .inner {
-  --size: calc(100% - var(--frame-width));
   padding: var(--frame-padding);
-  width: var(--size);
-  height: 100vh;
+  width: var(--frame-element-size);
+  
   flex-direction: column;
   display: flex;
+
   background-color: var(--background);
   border-radius: var(--frame-round);
+
   z-index: 0;
+
 
 }
 
